--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
 
     <section class="section__container about__container" id="about">
       <div class="about__image">
-        <img src="san pic.jpg" alt="Sanmathi portrait" class="about__img" />
+        <img src="images/san pic.jpg" alt="Sanmathi portrait" class="about__img" />
       </div>
       <div class="about__content">
         <h2 class="section__header">About Me</h2>
@@ -118,7 +118,7 @@
       </p>
       <div class="project__grid">
         <div class="project__card">
-          <img src="ice proj.png" alt="E-Commerce Icecream Website" class="project__img" />
+          <img src="images/ice proj.png" alt="E-Commerce Icecream Website" class="project__img" />
           <span><i class="ri-brain-line"></i></span>
           <h4>E-Commerce Icecream Website</h4>
           <p>
@@ -127,7 +127,7 @@
         </div>
         
         <div class="project__card">
-          <img src="resst proj.png" alt="E-commerce Restaurant Website" class="project__img" />
+          <img src="images/resst proj.png" alt="E-commerce Restaurant Website" class="project__img" />
           <span><i class="ri-code-box-line"></i></span>
           <h4>E-commerce Restaurant Website</h4>
           <p>
@@ -135,7 +135,7 @@
           </p>
         </div>
         <div class="project__card">
-          <img src="port proj.png" alt="Personal Portfolio Website" class="project__img" />
+          <img src="images/port proj.png" alt="Personal Portfolio Website" class="project__img" />
           <span><i class="ri-image-line"></i></span>
           <h4>Personal Portfolio Website</h4>
           <p>
@@ -153,28 +153,28 @@
       </p>
       <div class="achivements__grid">
         <div class="achivements__card">
-          <img src="AI certificate_page-0001.jpg" alt="AI Certificate" />
+          <img src="images/AI certificate_page-0001.jpg" alt="AI Certificate" />
         </div>
         <div class="achivements__card">
-          <img src="MERN certificate_page-0001.jpg" alt="MERN Stack Certificate" />
+          <img src="images/MERN certificate_page-0001.jpg" alt="MERN Stack Certificate" />
         </div>
         <div class="achivements__card">
-          <img src="TCS certificate_page-0001.jpg" alt="TCS Certificate" />
+          <img src="images/TCS certificate_page-0001.jpg" alt="TCS Certificate" />
         </div>
         <div class="achivements__card">
-          <img src="udemy java and python cert_page-0001.jpg" alt="Java and Python Certificate" />
+          <img src="images/udemy java and python cert_page-0001.jpg" alt="Java and Python Certificate" />
         </div>
         <div class="achivements__card">
-          <img src="generative ai certificate_page-0001.jpg" alt="Generative AI Certificate" />
+          <img src="images/generative ai certificate_page-0001.jpg" alt="Generative AI Certificate" />
         </div>
         <div class="achivements__card">
-          <img src="intel ai aware cer.jpg" alt="Intel AI Awareness Certificate" />
+          <img src="images/intel ai aware cer.jpg" alt="Intel AI Awareness Certificate" />
         </div>
         <div class="achivements__card">
-          <img src="intel ai appreciate cer.jpg" alt="Intel AI Appreciation Certificate" />
+          <img src="images/intel ai appreciate cer.jpg" alt="Intel AI Appreciation Certificate" />
         </div>
         <div class="achivements__card">
-          <img src="Simplilearn Certificate for excel_page-0001.jpg" alt="Excel Certificate" />
+          <img src="images/Simplilearn Certificate for excel_page-0001.jpg" alt="Excel Certificate" />
         </div>
       </div>
     </section>
@@ -186,7 +186,7 @@
       </p>
       <div class="project__grid">
         <div class="project__card">
-          <img src="big learn.jpeg" alt="E-Commerce Icecream Website" class="project__img" />
+          <img src="images/big learn.jpeg" alt="E-Commerce Icecream Website" class="project__img" />
           <span><i class="ri-brain-line"></i></span>
           <h4>E-Commerce Icecream Website</h4>
           <p>
@@ -197,7 +197,7 @@
         <div class="project__card">
           <img src="intern letter.png" alt="E-commerce Restaurant Website" class="project__img" />
           <span><i class="ri-code-box-line"></i></span>
-          <h4>E-commerce Restaurant Website</h4>
+          <h4>images/E-commerce Restaurant Website</h4>
           <p>
             Showcases a restaurant with an interactive menu, reservation system, location details, customer testimonials, event updates, and contact forms, designed to reflect the brand and attract diners effectively.
           </p>
